# kalpzero-enterprise

./: .gitignore  EXECUTION_TRACKER.md  OPERATIONS.md  README.md  ecosystem.config.cjs  nestcraft_api.csv  package-lock.json  package.json  pnpm-lock.yaml  reference_api.csv  reference_files.txt  run.sh
apps/api/: README.md  dev.db  kalp_openai_agent.py  pyproject.toml  requirements-win.txt
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: auth.py  commerce.py  commerce_cart.py  forms.py  hotel.py  imports.py  platform.py  publishing.py  theme.py  travel.py
apps/api/app/core/: authz.py  config.py  security.py
apps/api/app/db/: migrate_roles.py  models.py  models_legacy.py  mongo.py  session.py
apps/api/app/models/: __init__.py  base.py  commerce.py  hotel.py  travel.py
apps/api/app/repositories/: auth.py  commerce.py  commerce_legacy.py  forms.py  hotel.py  imports.py  platform.py  themerepo.py  travel.py
apps/api/app/schemas/: requests.py  responses.py
apps/api/app/services/: auth.py  commerce.py  commerce_cart.py  commerce_legacy.py  forms.py  hotel.py  hotel_legacy.py  imports.py  imports_commerce.py  platform.py  publishing.py  themeservice.py  travel.py  travel_legacy.py  website_provisioning.py
apps/api/app/tests/: conftest.py  support.py  test_api.py  test_commerce.py  test_publishing.py  test_session.py
apps/api/app/utlis/: utlis.py
apps/api/scratch/: check_jose.py  verify_security.py
apps/web/lib/: api.ts  (+61 more)
docs/: 10_PUBLIC_PUBLISHING_AND_DISCOVERY.md  12_EXECUTION_ROADMAP_90_DAYS.md  15_HOTEL_VERTICAL_STATUS.md  (+2 more)
(+386 files in other folders)
